--- a/faq.html
+++ b/faq.html
@@ -18,7 +18,7 @@
     
     <link rel="icon" type="image/png" href="img/logoicon.png">
 </head>
-<body  style="background-color: #fc8f41">
+<body  style="background-color: #fc8f41; max-width: 1600px; left:50%; position: relative; transform: translate(-50%, 0)">
 
 <div class="position-relative overflow-hidden p-3 p-md-1 m-md-1 text-center">
     <div class="col-md-3" id="rightheader">
@@ -80,11 +80,13 @@
             <br/><br />
             <b>Ab wann ist eine logopädische Therapie notwendig?</b><br />
             Bezüglich des Alters kann man hier keine genaue Aussage treffen. Beispielsweise benötigen auch wenige Wochen alte Säuglinge zum Teil eine logopädische Therapie (Fütterstörungen).
-            Im Bereich der Sprachtherapie bei Kindern gilt: Je früher eine Verzögerung oder eine Störung der Sprachlichen Entwicklung entdeckt und therapiert wird desto schneller kann das Kind den Rückstand aufholen. 
+            Im Bereich der Sprachtherapie bei Kindern gilt: Je früher eine Verzögerung oder eine Störung der Sprachlichen Entwicklung entdeckt und therapiert wird, desto schneller kann das Kind den Rückstand aufholen. 
             Bei erwachsenen Patienten hängt die Notwendigkeit der Therapie auch oft davon ab, ob der Betroffene etwas ändern möchte oder nicht. 
             <br/><br />
             <b>Logopädie für Erwachsene: Was wird gemacht?</b><br />
-            Im Bereich der Erwachsenen Therapie stehen einerseits Menschen mit stimmlichen Beschwerden und andererseits Menschen mit neurologischen Erkrankungen im Vordergrund. Auch hier orientiert sich die Therapie am individuellen Störungsbild. Bei Aussprache-, Schluck oder muskulären Problemen kommt es beispielsweise zum Muskelaufbautraining. Bei Patienten mit sprachlichen Defiziten (z.B. Erfassen sprachlicher Inhalte…) ist es umso wichtiger, den Betroffenen genau an der Stelle abzuholen, an der er steht.
+            Im Bereich der Erwachsenen-Therapie stehen einerseits Menschen mit stimmlichen Beschwerden und andererseits Menschen mit 
+            <a href="schlaganfall.html" id="schlag2">neurologischen Erkrankungen</a>
+            im Vordergrund. Auch hier orientiert sich die Therapie am individuellen Störungsbild. Bei Aussprache-, Schluck- oder muskulären Problemen kommt es beispielsweise zum Muskelaufbautraining. Bei Patienten mit sprachlichen Defiziten (z.B. Erfassen sprachlicher Inhalte…) ist es umso wichtiger, den Betroffenen genau an der Stelle abzuholen, an der er steht.
             <br/><br />
             <b>Wie lange dauert die logopädische Behandlung?</b><br />
             Zu dieser Frage kann leider keine pauschale Aussage getroffen werden. Die Anzahl der benötigten Einheiten schwankt je nach Patienten und Störungsbild stark. Selbst wenn zwei Personen exakt dieselben Symptome zeigen, kann die Anzahl der benötigten Einheiten stark voneinander abweichen. Verschrieben werden allerdings meistens 7 – 10 Einheiten, danach muss eine erneute Zuweisung eines Arztes erfolgen.
@@ -98,7 +100,7 @@
             Meine Tarife finden Sie hier: <a href="./tarife.html" id="tariffromfaq">Tarife mobile logopädische Praxis Graz und Bruck/Mur</a>
             <br/><br />
             <b>Wer übernimmt die Therapiekosten?</b><br />
-            In der Steiermark gibt es im freiberuflichen Bereich nur Wahllogopäden. Das bedeutet, dass je nach Krankenkasse ca. die Hälfte des anfallenden Betrags von der Krankenkasse übernommen wird. Der Restbetrag muss selbst übernommen werden.
+            In der Steiermark gibt es im freiberuflichen Bereich nur Wahllogopäden (Stand Juli 2019). Das bedeutet, dass je nach Krankenkasse ca. die Hälfte des anfallenden Betrags von der Krankenkasse übernommen wird. Der Restbetrag muss selbst übernommen werden.
             <br/><br />
             <b>Wer verordnet Logopädie?</b><br />
             Verordnet wird die Therapie entweder vom Hausarzt oder vom jeweiligen Facharzt (Kinderarzt, Neurologe, HNO-Arzt…). Die Bewilligung der Therapie erfolgt durch die Krankenkasse (beim Arzt nachfragen).
@@ -129,7 +131,7 @@
             <p class="lead">Beim Erstgespräch wird die Krankengeschichte erhoben. Auch die
                     Möglichkeit einer Einsicht in Vorbefunde ist von Vorteil. Je nach Störung
                     kommt es zu einer kurzen Überprüfung von Fähigkeiten oder
-                    Muskelstrukturen. So kann erfasst werden, ob und wenn, welche
+                    Muskelstrukturen. So kann erfasst werden, ob und wann welche
                     Testungen zur Einstufung des jeweiligen Störungsbildes erforderlich
                     sind.
             </p>
@@ -137,11 +139,19 @@
                     erster Therapieplan zur Erarbeitung des gesetzten Zieles erstellt
                     werden.
             </p>
+            <p class="lead">Die Therapie wird je nach Ressourcen des Patienten individuell gestaltet.
+                Während mit Kindern Ziele in erster Linie spielerisch erarbeitet werden, ist die 
+                Therapie im Erwachsenenbereich stark von der Grunderkrankung abhängig. Häufig kann die
+                Therapie mit Hilfe eines Heimübungsprogramms unterstützt werden. Während Erwachsene
+                und ältere Kinder dies meist alleine durchführen können, sind schwer betroffene Patienten
+                und Kleinkinder häufig auf die Hilfe von Bezugspersonen angewiesen. Hier empfielt sich
+                die Anwesenheit der entsprechenden Bezugspersonen auch in den Therapiesitzungen.
+            </p>
             <h2 class="display-5 mb-4 mt-5">Dauer und Häufigkeit der Therapie sowie Therapiepausen</h2>
             <p class="lead">Abhängig von der Belastbarkeit des Patienten (Allgemeinzustand,
                     Alter…), dem bestehenden Störungsbild (Sprachstörung,
                     Schluckstörung, Stimmstörung, muskuläre Störung) und dem
-                    Schweregrad der Störung, kann sich sowohl die benötigte
+                    Schweregrad der Störung kann sich sowohl die benötigte
                     Therapiehäufigkeit als auch die Therapiedauer stark unterscheiden. Zumeist
                     wird im freiberuflichen Setting eine Einheit pro Woche durchgeführt, bei
                     Bedarf kann die Frequenz allerdings erhöht werden.
