--- a/uebermich.html
+++ b/uebermich.html
@@ -21,7 +21,7 @@
     
     <link rel="icon" type="image/png" href="img/logoicon.png">
 </head>
-<body  style="background-color: #fc8f41">
+<body  style="background-color: #fc8f41; max-width: 1600px; left:50%; position: relative; transform: translate(-50%, 0)">
 
 <div class="position-relative overflow-hidden p-3 p-md-1 m-md-1 text-center">
     <div class="col-md-3" id="rightheader">
