--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
                 Meine logopädische Praxis:
             </p>
             <ul class="lead">
-                <li>Praxisräume in Graz</li>
-                <li>Ab Oktober 2019 auch in Bruck/Mur</li>
+                <li>Praxisräume in Graz (dienstags)</li>
+                <li>Praxisräume in Bruck/Mur (mittwochs und freitags)</li>
                 <li>Hausbesuche in den Bezirken Graz, Graz Umgebung und im Raum Bruck an der Mur und Kapfenberg</li>
             </ul>
             <br />
