--- a/schwerpunkte.html
+++ b/schwerpunkte.html
@@ -82,7 +82,10 @@
                     <a href="schlaganfall.html" id="schlaglink"> Schlaganfall oder Schädelhirntrauma</a>
                     , bei degenerativen Erkrankungen,...) fallen in meinen Tätigkeitsbereich.
             </p>
-            <h2 class="display-5 mb-4 mt-5">Therapieangebot in der logopädischen Praxis</h2>
+            <section id="schreiben">
+                <img src="img/schreiben.jpg" alt="mobile logopädische Praxis Graz">
+            </section>
+            <h2 class="display-5 mb-4 mt-3">Therapieangebot in der logopädischen Praxis</h2>
             <div class="lead">
                 <h3><b>Neurologische Sprach,- und Sprechstörungen</b> (nach
                     Schlaganfällen, Schädel-Hirn-Traumata,
@@ -146,7 +149,10 @@
             <p class="lead">Anstoß zur Gründung der mobilen Praxis war es, auch imobilen Menschen einen Zugang zur 
                 logopädischen Therapie zu geben.
             </p>
-            <h2 class="display-5  mb-4 mt-5">Spezielles Angebot meiner mobilen Logopädie</h2>
+            <section id="oma">
+                <img src="img/oma.jpg" alt="mobile logopädische Praxis Graz">
+            </section>
+            <h2 class="display-5  mb-4 mt-3">Spezielles Angebot meiner mobilen Logopädie</h2>
             <p class="lead">Damit Sie sich vollkommen auf die Therapie konzentrieren können und keine zusätzlichen
                 Umstände haben, können wir in Ihrem eigenen Heim Erfolge erzielen. Mit einem geringen
                 Aufschlag, dem Kilometergeld, ist dies einfach zu bewerkstelligen.
