--- a/faq.html
+++ b/faq.html
@@ -94,7 +94,13 @@
             <b>Logopädie bei Kindern: Wie läuft das ab?</b><br />
             Wie auch im Erwachsenenbereich unterscheidet sich die Therapie je nach Störungsbild. Aber auch in diesem Bereich kann sowohl am Muskelaufbau als auch an den höheren sprachlichen Funktionen (z.B. Erfassen und Umsetzen sprachlicher Inhalte) gearbeitet werden. Je nach Alter des Kindes muss die Therapie mehr oder weniger spielerisch erfolgen.
             Wichtig ist es, auch zu bedenken, dass es im Kinderbereich zumeist darum geht, neue Inhalte zu vermitteln. Gerade im neurologischen Bereich geht es vielmehr darum, bereits erlernte Inhalte wieder neu zu entdecken.
-            <br/><br />
+            <br/>
+            </p>
+            <section id="kind_zunge">
+                <img src="img/kind_zunge.png" alt="Sprechtherapie Graz">
+            </section>
+            <br />
+            <p class="lead">
             <b>Wie teuer ist die Therapie?</b><br />
             Allgemein orientieren sich die Preise für eine Therapie am vorgeschlagenen Stundensatz des Berufsverbandes Logopaedieaustria (Stand Juli 2019: 87,09/Stunde). 
             Meine Tarife finden Sie hier: <a href="./tarife.html" id="tariffromfaq">Tarife mobile logopädische Praxis Graz und Bruck/Mur</a>
@@ -135,6 +141,9 @@
                     Testungen zur Einstufung des jeweiligen Störungsbildes erforderlich
                     sind.
             </p>
+            <section id="opa">
+                <img src="img/opa.jpg" alt="Sprechtherapie Graz">
+            </section>
             <p class="lead">Anhand einer störungsspezifischen Testung kann anschließend ein
                     erster Therapieplan zur Erarbeitung des gesetzten Zieles erstellt
                     werden.
@@ -147,7 +156,10 @@
                 und Kleinkinder häufig auf die Hilfe von Bezugspersonen angewiesen. Hier empfielt sich
                 die Anwesenheit der entsprechenden Bezugspersonen auch in den Therapiesitzungen.
             </p>
-            <h2 class="display-5 mb-4 mt-5">Dauer und Häufigkeit der Therapie sowie Therapiepausen</h2>
+            <section id="kind">
+                <img src="img/kind.jpg" alt="Sprechtherapie Graz">
+            </section>
+            <h2 class="display-5 mb-4 mt-3">Dauer und Häufigkeit der Therapie sowie Therapiepausen</h2>
             <p class="lead">Abhängig von der Belastbarkeit des Patienten (Allgemeinzustand,
                     Alter…), dem bestehenden Störungsbild (Sprachstörung,
                     Schluckstörung, Stimmstörung, muskuläre Störung) und dem
