--- a/schlaganfall.html
+++ b/schlaganfall.html
@@ -83,6 +83,9 @@
                 bemerkten oder auch unbemerkten Verschlucken kann es zu Atemnot
                 und schweren Lungenentzündungen kommen.
             </p>
+            <section id="schlaganfall">
+                    <img src="img/schlaganfall.png" alt="mobile logopädische Praxis Graz">
+                </section>
             <p class="lead">
                 Eine frühzeitige 
                 <a href="schwerpunkte.html" id="schwerpunktlink1">logopädische Therapie</a> 
@@ -91,6 +94,7 @@
                 <a href="uebermich.html" id="uebermichlink10">Grazer Logopädin</a>, in
                 Graz, Graz Umgebung und im Raum Bruck/Mur auch direkt zu Ihnen nach Hause kommen.
             </p>
+            
             <h2 class="display-5 mb-4 mt-5">Schnelle Hilfe bei Verlust des Sprachvermögens oder Sprachverstehens</h2>
             <p class="lead">
                     Bei etwa einem Drittel der Personen, die einen Schlaganfall erleiden, treten 
@@ -149,12 +153,18 @@
                 das eigene Heim verlassen. Es ist wichtig, dass Sie und Ihre Liebsten auch in solchen Fällen 
                 therapeutische Unterstützung und Hilfe bekommen.
             </p>
+            <section id="schlucken">
+                <img src="img/schlucken.jpg" alt="mobile logopädische Praxis Graz">
+            </section>
             <p class="lead">
                 In Einzelstunden fokussieren wir gemeinsam Sprechen, Schreiben, Verstehen und Lesen 
                 und erarbeiten Schritt für Schritt Erfolge. Auch die Schluckfunktion kann nach einem Schlaganfall
                 beeinträchtigt sein. Wird eine Störung des Schluckens nicht behandelt, können Nahrungsmittel in die 
                 Luftröhre gelangen und so eine Lungenentzündung oder Atemnot verursachen. 
             </p>
+            <section id="verstaendnis">
+                <img src="img/verstaendnis.jpg" alt="mobile logopädische Praxis Graz">
+            </section>
             <p class="lead">
                 Weitere <a href="faq.html">Fragen rund um meine mobile Logopädie</a> werden auf meiner FAQ-Seite
                 beantwortet. Bei den Tarifen finden Sie die <a href="tarife.html">Kosten für eine logopädische Therapie</a>.
@@ -163,6 +173,10 @@
             <p class="lead">
                 Ich freue mich auf Sie!
             </p>
+            <br />
+            <section id="schlaganfall2">
+                <img src="img/schlaganfall2.jpg" alt="mobile logopädische Praxis Graz">
+            </section>
         </div>
     </div>
 </div>
