--- a/uebermich.html
+++ b/uebermich.html
@@ -120,6 +120,13 @@
                     (SpAT)</li>
                 <li>Taping für Logopäden</li>
             </ul>
+            <br />
+            <section id="taping">
+                <img src="img/taping.jpg" alt="mobile logopädische Praxis Graz">
+            </section>
+            <section id="kanuele">
+                <img src="img/kanuele.jpg" alt="mobile logopädische Praxis Graz">
+            </section>
         </div>
     </div>
 </div>
