--- a/tarife.html
+++ b/tarife.html
@@ -113,9 +113,9 @@
             <br>
             <p class="lead">Termine nach Vereinbarung:</p>
             <ul class="lead">
-                <li>Mo, Mi, Do, Fr: 14:30 bis 20:00 Hausbesuche</li>
-                <li>Di: 16:00 bis 20:00 in den Praxisräumen in Graz</li>
-                <li>Ab Oktober 2019 auch in den Praxisräumen in Bruck an der Mur</li>
+                <li>Di: 09:00 bis 18:00 in den Praxisräumen in Graz</li>
+                <li>Mi und Fr: 09:00 bis 18:00 in den Praxisräumen in Bruck</li>
+                <li>Mo, Do bzw. bei Kapazität Mi und Fr: Hausbesuche</li>
             </ul>
             <br />
             <br />
