--- a/faq.html
+++ b/faq.html
@@ -97,7 +97,7 @@
             <br/>
             </p>
             <section id="kind_zunge">
-                <img src="img/kind_zunge.png" alt="Sprechtherapie Graz">
+                <img src="img/logopaedie_kind.png" alt="Logopädie Kind">
             </section>
             <br />
             <p class="lead">
@@ -142,7 +142,7 @@
                     sind.
             </p>
             <section id="opa">
-                <img src="img/opa.jpg" alt="Sprechtherapie Graz">
+                <img src="img/therapie_logopaede.jpg" alt="Therapie Logopaede">
             </section>
             <p class="lead">Anhand einer störungsspezifischen Testung kann anschließend ein
                     erster Therapieplan zur Erarbeitung des gesetzten Zieles erstellt
@@ -157,7 +157,7 @@
                 die Anwesenheit der entsprechenden Bezugspersonen auch in den Therapiesitzungen.
             </p>
             <section id="kind">
-                <img src="img/kind.jpg" alt="Sprechtherapie Graz">
+                <img src="img/logopaedie_kinder.jpg" alt="Logopädie Kinder">
             </section>
             <h2 class="display-5 mb-4 mt-3">Dauer und Häufigkeit der Therapie sowie Therapiepausen</h2>
             <p class="lead">Abhängig von der Belastbarkeit des Patienten (Allgemeinzustand,
