--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="keywords" content="mobile Logopädie Graz, Stimmstörung
         Hilfe Graz, Sprechstörung Hilfe Graz, Schluckstörung Hilfe Graz" />
     <meta name="robots" content="index, follow" />
-
+    
     <link rel="icon" type="image/png" href="img/logoicon.png">
 </head>
 <body  style="background-color: #fc8f41; max-width: 1600px; left:50%; position: relative; transform: translate(-50%, 0)">
@@ -27,7 +27,7 @@
     <div class="col-md-3" id="rightheader">
         <section id="iconright">
             <a href="./index.html">
-                <img src="img/logoorangeborder.png" alt="Logopädie Graz" width="207" height="203">
+                <img src="img/logoorangeborder.png" alt="Logopädie Graz">
             </a>
         </section>
     </div>
@@ -36,7 +36,7 @@
         <p class="lead font-weight-bold" id="title2">Helena Pernul, BSc, Ihre Wahllogopädin in Graz und Bruck/Mur</p>
         <p class="lead font-weight-normal mb-0" id="title3">Mobile Logopädie in Graz, Graz Umgebung, Bruck/Mur und Kapfenberg</p>
     </div>
-
+    
     <div class="product-device shadow-sm d-none d-md-block"></div>
     <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
 </div>
@@ -74,13 +74,13 @@
         <div class="mb-3 pb-3">
             <h1 class="display-5 mb-4">LOGO on TOUR - Logopädie in Graz und Bruck/Mur</h1>
             <p class="lead">
-                Ziel von LOGO on TOUR ist es, Ihnen und Ihren Lieben eine kompetente logopädische Therapie
-                    zu ermöglichen. Diese kann in den logopädischen Praxisräumen, aber auch in den eigenen vier
-                    Wänden erfolgen.
+                Ziel von LOGO on TOUR ist es, Ihnen und Ihren Lieben eine kompetente logopädische Therapie 
+                    zu ermöglichen. Diese kann in den logopädischen Praxisräumen, aber auch in den eigenen vier 
+                    Wänden erfolgen. 
             </p>
             <p class="lead"> Als <a href="uebermich.html" id="uebermichlink2">ausgebildete Logopädin</a>
                 umfasst meine
-                <a href="schwerpunkte.html" id="kontaktlink2">Arbeit</a>
+                <a href="schwerpunkte.html" id="kontaktlink2">Arbeit</a> 
                 folgende Tätigkeitsbereiche:
             </p>
             <ul class="lead">
@@ -92,7 +92,7 @@
             </ul>
             <h2 class="display-5 mb-4 mt-5">Logopädie für Kinder und Erwachsene</h2>
             <p class="lead">
-                Sowohl im Bereich der logopädischen Therapie mit Kindern, als auch Erwachsenen
+                Sowohl im Bereich der logopädischen Therapie mit Kindern, als auch Erwachsenen 
                 oder betagten Personen stehe ich Ihnen gerne beratend und therapeutisch als
                 <a href="uebermich.html" id="uebermichlink3">ausgebildete Logopädin</a>
                 zur Seite.
@@ -103,7 +103,7 @@
             <ul class="lead">
                 <li>Praxisräume in Graz (dienstags)</li>
                 <li>Praxisräume in Bruck/Mur (mittwochs und freitags)</li>
-                <li>Hausbesuche in den Bezirken Graz, Graz Umgebung und im Raum Bruck an der Mur und Kapfenberg</li>
+                <li>Hausbesuche in den Bezirken Graz, Graz Umgebung und im Raum Bruck an der Mur und Kapfenberg, auch Besuche in Pflegeheimen möglich</li>
             </ul>
             <br />
             <br />
@@ -111,10 +111,10 @@
                 <a href="kontakt.html" id="kontaktlink3">Kontaktieren Sie mich</a>,
                 ich freue mich auf Sie!
             </p>
-            <br />
+            <br />      
             <br />
             <section id="logologo">
-                <img src="img/logopaedie_graz.jpg" alt="Logopädie Graz" width="309" height="304">
+                <img src="img/logopaedie_graz.jpg" alt="Logopädie Graz">
             </section>
         </div>
 
@@ -147,7 +147,7 @@
                 <a href="./schlaganfall.html">Logopädie nach einem Schlaganfall</a>
             </p>
             <p class="lead">
-                Antworten auf häufig gestellte Fragen und Informationen zur logopädischen
+                Antworten auf häufig gestellte Fragen und Informationen zur logopädischen 
                 Therapie finden Sie hier:
                 <a href="./faq.html">Informationen zur Logopädie</a>
             </p>
