--- a/schlaganfall.html
+++ b/schlaganfall.html
@@ -84,7 +84,7 @@
                 und schweren Lungenentzündungen kommen.
             </p>
             <section id="schlaganfall">
-                    <img src="img/schlaganfall.png" alt="mobile logopädische Praxis Graz">
+                    <img src="img/logopaedie_schlaganfall.png" alt="Logopädie Schlaganfall">
                 </section>
             <p class="lead">
                 Eine frühzeitige 
@@ -113,7 +113,10 @@
                     Je nach Störungsbereich und -ausprägung müssen unterschiedliche Ziele gesetzt und 
                     verschiedene Methoden angewendet werden. 
             </p>
-            <h2 class="display-5 mb-4 mt-5">Formen der Sprech- und Sprachbeeinträchtigung nach einem Schlaganfall</h2>
+            <section id="speech">
+                <img src="img/speech_language_therapist_graz.jpg" alt="Speech and Language Therapist Graz">
+            </section>
+            <h2 class="display-5 mb-4 mt-2">Formen der Sprech- und Sprachbeeinträchtigung nach einem Schlaganfall</h2>
             <p class="lead">
                     Nach einem Schlaganfall oder einem Schädel-Hirn-Trauma kann die Störung so stark ausgeprägt sein, 
                     dass Betroffene nicht in der Lage sind, sich zu verständigen. Sie 
@@ -140,6 +143,10 @@
                     dar. Zumeist bestehen noch minimale Auffälligkeiten in allen Bereichen.
                 </li>
             </ul>
+            <br />
+            <section id="aphasie">
+                <img src="img/logopaedie_bruck_kapfenberg.jpg" alt="Logopädie Bruck Kapfenberg">
+            </section>
         </div>
     </div>
     <div class="bg-light mr-md-3 pt-3 px-3 pt-md-4 px-md-5 col-md-6 text-center overflow-hidden" id="informationen">
@@ -154,7 +161,7 @@
                 therapeutische Unterstützung und Hilfe bekommen.
             </p>
             <section id="schlucken">
-                <img src="img/schlucken.jpg" alt="mobile logopädische Praxis Graz">
+                <img src="img/logopaedie_erwachsene.jpg" alt="Logopädie Erwachsene">
             </section>
             <p class="lead">
                 In Einzelstunden fokussieren wir gemeinsam Sprechen, Schreiben, Verstehen und Lesen 
@@ -163,7 +170,7 @@
                 Luftröhre gelangen und so eine Lungenentzündung oder Atemnot verursachen. 
             </p>
             <section id="verstaendnis">
-                <img src="img/verstaendnis.jpg" alt="mobile logopädische Praxis Graz">
+                <img src="img/sprachverstaendnis_logopaedie.jpg" alt="Sprachverständnis Logopädie">
             </section>
             <p class="lead">
                 Weitere <a href="faq.html">Fragen rund um meine mobile Logopädie</a> werden auf meiner FAQ-Seite
@@ -175,7 +182,7 @@
             </p>
             <br />
             <section id="schlaganfall2">
-                <img src="img/schlaganfall2.jpg" alt="mobile logopädische Praxis Graz">
+                <img src="img/mobile_logopaedie_graz.jpg" alt="mobile Logopädie Graz">
             </section>
         </div>
     </div>
