--- a/schwerpunkte.html
+++ b/schwerpunkte.html
@@ -83,7 +83,7 @@
                     , bei degenerativen Erkrankungen,...) fallen in meinen Tätigkeitsbereich.
             </p>
             <section id="schreiben">
-                <img src="img/schreiben.jpg" alt="mobile logopädische Praxis Graz">
+                <img src="img/grazer_logopaedie.jpg" alt="Grazer Logopädie">
             </section>
             <h2 class="display-5 mb-4 mt-3">Therapieangebot in der logopädischen Praxis</h2>
             <div class="lead">
@@ -150,7 +150,7 @@
                 logopädischen Therapie zu geben.
             </p>
             <section id="oma">
-                <img src="img/oma.jpg" alt="mobile logopädische Praxis Graz">
+                <img src="img/logopaedie_graz_umgebung.jpg" alt="Logopädie Graz Umgebung">
             </section>
             <h2 class="display-5  mb-4 mt-3">Spezielles Angebot meiner mobilen Logopädie</h2>
             <p class="lead">Damit Sie sich vollkommen auf die Therapie konzentrieren können und keine zusätzlichen
@@ -160,6 +160,11 @@
             </p>
             <section id="sprachverstaendnis">
                 <img src="img/mobile_logopaedin.jpg" alt="Sprachtherapie Graz">
+            </section>
+            <p class="lead">Auch die logopädische Betreuung von Patienten in Pflegeheimen übernehme ich gerne.
+            </p>
+            <section id="pflegeheim">
+                <img src="img/logopaedie_pflegeheim.jpg" alt="Logopädie Pflegeheim">
             </section>
         </div>
     </div>
