--- a/uebermich.html
+++ b/uebermich.html
@@ -122,10 +122,13 @@
             </ul>
             <br />
             <section id="taping">
-                <img src="img/taping.jpg" alt="mobile logopädische Praxis Graz">
+                <img src="img/therapie_stimme_sprache.jpg" alt="Therapie Stimme Sprache">
             </section>
             <section id="kanuele">
-                <img src="img/kanuele.jpg" alt="mobile logopädische Praxis Graz">
+                <img src="img/logopaedie_therapie.jpg" alt="Logopädie Therapie">
+            </section>
+            <section id="zahnspange">
+                <img src="img/logopaede_zahnspange.jpg" alt="Logopäde Zahnspange">
             </section>
         </div>
     </div>
