--- a/faq.html
+++ b/faq.html
@@ -97,7 +97,8 @@
             <br/>
             </p>
             <section id="kind_zunge">
-                <img src="img/logopaedie_kind.png" alt="Logopädie Kind">
+                <img src="img/logopaedie_kind.png" alt="Je früher Kinder mit logopädischen Problemen eine 
+                Therapie machen, umso größer die Erfolge">
             </section>
             <br />
             <p class="lead">
@@ -142,7 +143,8 @@
                     sind.
             </p>
             <section id="opa">
-                <img src="img/therapie_logopaede.jpg" alt="Therapie Logopaede">
+                <img src="img/therapie_logopaede.jpg" alt="Grazer mobile logopädische Praxis für Sprach- und 
+                Sprechstörungen für Kinder und Erwachsene">
             </section>
             <p class="lead">Anhand einer störungsspezifischen Testung kann anschließend ein
                     erster Therapieplan zur Erarbeitung des gesetzten Zieles erstellt
@@ -157,7 +159,8 @@
                 die Anwesenheit der entsprechenden Bezugspersonen auch in den Therapiesitzungen.
             </p>
             <section id="kind">
-                <img src="img/logopaedie_kinder.jpg" alt="Logopädie Kinder">
+                <img src="img/logopaedie_kinder.jpg" alt="Logopädische Praxis für Kinder bei Sprech-, Sprach- 
+                und Leseproblemen">
             </section>
             <h2 class="display-5 mb-4 mt-3">Dauer und Häufigkeit der Therapie sowie Therapiepausen</h2>
             <p class="lead">Abhängig von der Belastbarkeit des Patienten (Allgemeinzustand,
