--- a/schlaganfall.html
+++ b/schlaganfall.html
@@ -84,7 +84,8 @@
                 und schweren Lungenentzündungen kommen.
             </p>
             <section id="schlaganfall">
-                    <img src="img/logopaedie_schlaganfall.png" alt="Logopädie Schlaganfall">
+                    <img src="img/logopaedie_schlaganfall.png" alt="Schnelle logopädische Praxis bei einem 
+                    Schlaganfall mit der mobilen Therapie">
                 </section>
             <p class="lead">
                 Eine frühzeitige 
@@ -161,7 +162,9 @@
                 therapeutische Unterstützung und Hilfe bekommen.
             </p>
             <section id="schlucken">
-                <img src="img/logopaedie_erwachsene.jpg" alt="Logopädie Erwachsene">
+                <img src="img/logopaedie_erwachsene.jpg" alt="Je früher Erwachsene mit Sprechproblemen, 
+                Schluckproblemen etc. Hilfe bekommen umso größer die 
+                Erfolge">
             </section>
             <p class="lead">
                 In Einzelstunden fokussieren wir gemeinsam Sprechen, Schreiben, Verstehen und Lesen 
@@ -182,7 +185,8 @@
             </p>
             <br />
             <section id="schlaganfall2">
-                <img src="img/mobile_logopaedie_graz.jpg" alt="mobile Logopädie Graz">
+                <img src="img/mobile_logopaedie_graz.jpg" alt="Mobile logopädische Praxis in Graz für 
+                neurologische Sprach- und Sprechstörungen">
             </section>
         </div>
     </div>
