--- a/uebermich.html
+++ b/uebermich.html
@@ -122,13 +122,13 @@
             </ul>
             <br />
             <section id="taping">
-                <img src="img/therapie_stimme_sprache.jpg" alt="Therapie Stimme Sprache">
+                <img src="img/therapie_stimme_sprache.jpg" alt="Stimmtherapie Bruck an der Mur und Graz">
             </section>
             <section id="kanuele">
-                <img src="img/logopaedie_therapie.jpg" alt="Logopädie Therapie">
+                <img src="img/logopaedie_therapie.jpg" alt="Logopädische Therapie in Graz bei Muskelschwäche">
             </section>
             <section id="zahnspange">
-                <img src="img/logopaede_zahnspange.jpg" alt="Logopäde Zahnspange">
+                <img src="img/logopaede_zahnspange.jpg" alt="Logopäde Zahnspange Therapie">
             </section>
         </div>
     </div>
