update kapfenberg therapiezentrum

--- a/uebermich.html
+++ b/uebermich.html
@@ -89,8 +89,10 @@
                 dreijährigem Studium meine Ausbildung zur
                 Logopädin an der Fachhochschule Kärnten in
                 Klagenfurt abgeschlossen.
-                Seit September 2017 arbeite ich im neurologischen
-                Therapiezentrum Kapfenberg als Logopädin.
+                Von September 2017 bis September 2019 habe ich im neurologischen
+                Therapiezentrum Kapfenberg als Logopädin gearbeitet. Im Laufe des Jahres
+                2019 habe ich mich dann mit meiner logopädischen Praxis "Logopädie Helena Pernul,
+                LOGO on TOUR" selbstständig gemacht.
             </p>
             <p class="lead">
                 Die 
