--- a/uebermich.html
+++ b/uebermich.html
@@ -90,9 +90,7 @@
                 Logopädin an der Fachhochschule Kärnten in
                 Klagenfurt abgeschlossen.
                 Von September 2017 bis September 2019 habe ich im neurologischen
-                Therapiezentrum Kapfenberg als Logopädin gearbeitet. Im Laufe des Jahres
-                2019 habe ich mich dann mit meiner logopädischen Praxis "Logopädie Helena Pernul,
-                LOGO on TOUR" selbstständig gemacht.
+                Therapiezentrum Kapfenberg als Logopädin gearbeitet.
             </p>
             <p class="lead">
                 Die 
